--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -86,7 +86,7 @@
     flex-direction: row-reverse;}
 
 .border{
-    border: 1px solid rgb(255, 255, 255);
+    border: 1px rgb(255, 255, 255);
 }
 .border header{
     background-color: rgb(255, 255, 218);
@@ -421,3 +421,5 @@ ul{
     }
     .button{
     max-width: 30px;}}
+
+    
